using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace SequenceCardGame
{
    public static class ConstantString
    {

        public const string player = "Player";
        public const string OpenBoxAnimation = "BoxTopOpen";
        public const string OpenBoardAnimation = "BoardOpen";
        public const string BoxTopBottomMove = "BoxTopBottomMove";
        public const string BoxTopClose = "BoxTopClose";
        public const string BoxDrop = "BoxDrop";
        public const string BoxTurnUpsideDown = "BoxTurnUpsideDown";
        public const string BoxTurnDownsideUp = "BoxTurnDownsideUp";
        public const string TagForDisplayCards = "Cards";
        public const string TagForPlayingCards = "PlayerCards";
        public const string TagForPlayingChips = "Chips";
        public const string TagForPlayingChipsTeam1 = "Team1Chips";
        public const string TagForPlayingChipsTeam2 = "Team2Chips";
        public const string TagForPlayingChipsTeam3 = "Team3Chips";

        public const string SaveDataFile = "/playerData.sav";

    }
}

